[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://art/level_HUD.png" type="Texture" id=2]
[ext_resource path="res://art/level_HUD_progressbar.png" type="Texture" id=3]
[ext_resource path="res://art/level_background.png" type="Texture" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 980, -20, 0, 0, 0, 0, 530, -210, 0, 0, 0, 0, 80, -20 )
}

[node name="Level" type="Node"]

script = ExtResource( 1 )

[node name="HUD" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="Background" type="TextureRect" parent="HUD" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 1920.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1060.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Progress" type="TextureProgress" parent="HUD/Background/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_right = 1020.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 5.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Textures" ]

[node name="Pause" type="ColorRect" parent="HUD" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 1920.0
rect_min_size = Vector2( 1080, 1920 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.498039 )
_sections_unfolded = [ "Rect" ]

[node name="Background" type="ParallaxBackground" parent="." index="1"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true
_sections_unfolded = [ "Scroll" ]

[node name="Base" type="ParallaxLayer" parent="Background" index="0"]

motion_scale = Vector2( 1, 0.75 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 2000 )
_sections_unfolded = [ "Motion" ]

[node name="BaseTexture" type="Sprite" parent="Background/Base" index="0"]

texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1080, 2000 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Visibility" ]

[node name="EnemySpawnZone" type="Path2D" parent="." index="2"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( -1.77778, -1.52588e-05 )
scale = Vector2( 1.02222, 1 )
curve = SubResource( 1 )

[node name="EnemySpawnSpot" type="PathFollow2D" parent="EnemySpawnZone" index="0"]

position = Vector2( 980, -20 )
rotation = -2.74206
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="EnemySpawnTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Items" type="Node" parent="." index="4"]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]


